fixed date facets breaking out of container.. dunno why it happens, dunno why this fixed it

--- a/cast/static/css/cast.css
+++ b/cast/static/css/cast.css
@@ -186,6 +186,7 @@
 .cast-date-facet-container {
     display: flex;
     flex-wrap: wrap;
+    height: auto;
 }
 
 .cast-date-facet-item {
